<resources>
    <string name="app_name">KirayePay</string>
    <string name="facebook_app_id">248881788956936</string>
    <string name="fb_login_protocol_scheme">fb248881788956936</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="action_dashboard">DashBoard</string>
    <string name="action_profile">Profile</string>
    <string name="action_logout">Log Out</string>
    <string name="title_post_ad">Post Ad</string>
    <string name="title_post_requirements">Post Requirements</string>
    <string name="title_search">Search</string>
    <string name="title_menu">Menu</string>
    <string name="Rs">\u20B9</string>
    <string name="disclaimer_one">KirayePay is just a way to connect the lenders and borrowers.</string>
    <string name="disclaimer_two">The transactions and deals happening between the two parties are on mutual understanding of both.</string>
    <string name="disclaimer_three">The transactions and deals happening between the two parties are on mutual understanding of both.</string>
    <string name="privacy_policy">This privacy policy describes how we handle your personal information.
        We collect, use, and share personal information to help the KirayePay website work and to keep it safe (details below).
        In formal terms, KirayePay is the "data controller" of your personal information.</string>
    <string name="collection">Information posted on KirayePay is obviously publicly available. Our servers are located throughout
        the country. Therefore,if you choose to provide us with personal information, you are consenting to the transfer and storage
        of that information on our servers.</string>
    <string name="disclosure">
1. All information contained by KirayePay is treated as strictly confidential and KirayePay does not and will not disclose or share such confidential information to / with any external organization.\n
2. The user\'s privacy is very important to us. We do not and shall not at any point in time rent user\'s personal information to third parties without user\'s explicit consent.\n
3. We may be required from time to time to disclose user\'s personal information to Governmental or law enforcing agencies or our regulators, but we will only do so under proper authority.\n
4. KirayePay also reserves the right to make use of the personal information in any investigation or judicial process relating to fraud on account of such transactions during the period KirayePay retains such information.\n
5. We may also disclose personal information to enforce our policies, respond to claims that a posting or other content violates other\'s rights, or protects anyone\'s rights, property or safety.\n
6. We may also share personal information with:\n
         - Corporate affiliates who help detect or prevent potentially illegal acts and provide joint services (Our corporate affiliates will market only to users who ask them to).\n
         - Service providers who help with our business operations.\n</string>
    <string name="using_info">You may use personal information gathered from KirayePay only to follow up with another user about a specific posting, not to send spam/ phising or
        collect personal information from someone who hasn\'t agreed to that.</string>
    <string name="acc_mod_del">You can see, modify or erase your personal information by reviewing your posting or account status page. Contact customer support at care@kirayepay.com to
        review any personal information we store that is not available on KirayePay. There may be a charge associated with such requests but these will not exceed the amounts permitted by
        law. We delete personal information when we no longer need it for the purposes we described earlier. We retain personal information as permitted by law to resolve disputes, enforce
        our policies; and prevent bad guys from coming back.</string>
    <string name="data_sec">We use a number of mechanisms (encryption, passwords, physical security) to protect the security and integrity of your personal information against unauthorized access and
        disclosure. Unfortunately, no data transmission over the internet can be guaranteed to be completely secure. So while we strive to protect such information, we cannot ensure or warrant the security
        of any information you transmit to us and you do so at your own risk. Once any personal information comes into our possession, we will take reasonable steps to protect that information from misuse and
        loss and from unauthorised access, modification or disclosure.</string>
    <string name="confidentiality">Users who use any of the features on KirayePay agree and accept that they have been fully informed by KirayePay that the use of features may lead to publication, to all users
        of KirayePay, of any personal information posted by them while using any specific feature on KirayePay. Users further agree that the authenticity of, and consequences from the posting by users of any personal
        information of themselves or any other person, are the sole responsibility of the user. Users further agree and accept that the terms of the Privacy Policy will be applicable to the use of all features,
        existing and new. However, the Users agree and accept that confidentiality of information posted on such features has been waived by the Users of such features themselves.</string>
    <string name="general">We may update, upgrade, modify (partially or fully) this policy at any time, with updates taking effect when you next post or after 30 days, whichever is sooner. If we or our corporate
        affiliates are involved in a merger or acquisition, we may share personal information with another company, but this policy will continue to apply. Send questions about this policy to
        care@kirayepay.com</string>
    <string name="tc_introduction">
        1.1 These terms and conditions (the Terms) set out the basis on which you may browse and use our website, available at www.kirayepay.com (the Site) and any services offered through it.\n
1.2 The Site is owned and operated by Preda Solutions Pvt. Ltd., a company registered in Delhi, India with registered no. 8026591\n
1.3 Your use of the Site will be governed by these Terms which will be a legal contract between us and you. By browsing or using the Site and/or any services, content or materials made available through the Site you are agreeing to be legally bound by the Terms.\n
1.4 When you list goods, property or services for rent on the Site, you are also subject to the Terms and Conditions.\n
1.5 If you would like to contact us for any reason please do so using the following details: Email:care@kirayepay.com\n</string>
    <string name="tc_changes">2.1 We may revise the Terms at any time by amending this page and, if we consider it to be appropriate, we will notify you of any material changes by e-mail.
        Your use of the Site will be subject to the most recent version of the Terms available on the Site.\n
2.2 We recommend that you read through the Terms available on the Site regularly so that you can be sure that you are aware of any changes that may apply to you.\n</string>
    <string name="tc_rental">3.1 The Site provides a platform for owners to list goods, property or services for rent. We are not the owner or the renter of any goods, property or services listed for rent on the Site. We are not party to any contract formed between you
        and any party for the rental of goods, property or services which is facilitated through the Site. Enforcement of any contractual obligations arising out of the completion of a transaction for rental of goods, property or services listed on the Site is the
        responsibility of the parties to that transaction.\n</string>
    <string name="tc_access">4.1 In order to use the Site, you must create a user account. You are solely responsible for maintaining the security of your account. You may not disclose your account password to any third party who is not authorised by you to use your
        account. You are solely responsible for any use of your account on the Site.\n
4.2 At all times during your use of the Site you must remain courteous to other users of the Site.\n
4.3 Access to the Site is permitted on a temporary basis. We may suspend, withdraw, discontinue or change all or any part of the Site without notice to you.\n
4.4 You must not misuse the Site by knowingly introducing viruses, trojans, worms, logic bombs or any other material which is malicious or technologically harmful. You must not attempt to gain unauthorised access to the Site, the server on which the Site is
        stored or any server, computer or database connected to the Site. You must not attack the Site via a denial-of-service attack or a distributed denial-of-service attack. By breaching this provision, you would commit a criminal offence under the
        Computer Misuse Act 1990. We will report any such breach to the relevant law enforcement authorities and we will co-operate with those authorities by disclosing your identity to them. In the event of such a breach, your right to use the Site will cease immediately.\n
4.5 You are responsible for making all arrangements necessary for you to have access to the Site.\n</string>
    <string name="tc_feedback">5.1 The Site contains functionality which allows you to leave feedback about those who you have transacted with through the Site.
5.2 When using the feedback system on the Site you agree that you will not submit or upload any feedback:
5.2.1 that is confidential, defamatory, infringing, obscene, offensive, racist, indecent, threatening or is otherwise unlawful or objectionable; or
5.2.2 that includes any personal data if uploading it to the Site would be a breach of the Data Protection Act 1998 or any other applicable data protection or privacy legislation.
5.3 You agree that any feedback you leave on the Site may be published on the Site and made available for viewing by other users of the Site.
5.4 You agree not to hold us responsible for any feedback published on the Site and release us from any liability arising out of or in connection with the publication of any feedback about you on the Site.
5.5 You may not leave feedback about yourself or attempt to manipulate the feedback system in any way.
</string>
    <string name="tc_payments">6.1 Payments for rentals facilitated through the Site are paid directly to the owner. Payment terms and methods of payment accepted are set by the relevant owner.We do not handle any funds for rentals facilitated through the Site.\n</string>
    <string name="tc_insurance">7.1 You must maintain appropriate insurance to cover against loss of or damage to the goods, property or services which you borrow or lend through the Site.\n</string>
    <string name="tc_complaints">8.1 If you are not satisfied with any transaction facilitated through the Site you should contact the applicable owner or renter in the first instance.\n
8.2 If you are unable to resolve your issue with the applicable owner or renter, please notify us of your issue by contacting us at care@kirayepay.com or by using the contact us section on the Site.\n</string>
</resources>